--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "Dylon Crowley-Perez",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongodb": "^6.5.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
