--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rest_api",
   "version": "1.0.0",
   "description": "Node.js resftul API for the Yakuza Series",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
