--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Dylon Crowley-Perez",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
